2009-02-05  Simon Fraser  <simon.fraser@apple.com>

        Fix build when ACCELERATED_COMPOSITING is turned on.
       
        Give RenderLayerBacking some love after the great
        RenderBoxModelObject split.
        
        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::updateLayerTransform):
        (WebCore::RenderLayerBacking::updateGraphicsLayerGeometry):
        (WebCore::RenderLayerBacking::contentsBox):
        (WebCore::RenderLayerBacking::paintIntoLayer):
        (WebCore::RenderLayerBacking::startAnimation):
        (WebCore::RenderLayerBacking::startTransition):
        * rendering/RenderLayerBacking.h:
        (WebCore::RenderLayerBacking::renderer):

2009-02-05  Simon Fraser  <simon.fraser@apple.com>

        Fix build when ACCELERATED_COMPOSITING is turned on.
        
        writeIndent() needs to be static to avoid warnings on some OSes,
        and remove unused CAToTransform3D() method.

        * platform/graphics/GraphicsLayer.cpp:
        (WebCore::writeIndent):
        * platform/graphics/mac/GraphicsLayerCA.mm:

2009-02-05  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Anders Carlsson

        Add some methods to the TransformOperation classes that are required
        by GraphicsLayer when ACCELERATED_COMPOSITING is turned on.

        * platform/graphics/transforms/MatrixTransformOperation.h:
        (WebCore::MatrixTransformOperation::create):
        (WebCore::MatrixTransformOperation::MatrixTransformOperation):
        * platform/graphics/transforms/ScaleTransformOperation.h:
        (WebCore::ScaleTransformOperation::x):
        (WebCore::ScaleTransformOperation::y):
        * platform/graphics/transforms/TranslateTransformOperation.h:
        (WebCore::TranslateTransformOperation::x):
        (WebCore::TranslateTransformOperation::y):

2009-02-05  Simon Fraser  <simon.fraser@apple.com>

        Minor clenaup: fix brace style in CompositeAnimationPrivate::updateTransitions(),